--- a/UP-HTML-Course/package.json
+++ b/UP-HTML-Course/package.json
@@ -2,6 +2,8 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "mustache": "^4.2.0",
+    "mustache-express": "^1.3.2",
     "mysql2": "^3.6.5"
   }
 }
