--- a/UP-HTML-Course/package.json
+++ b/UP-HTML-Course/package.json
@@ -1,9 +1,11 @@
 {
   "dependencies": {
     "body-parser": "^1.20.2",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mustache": "^4.2.0",
     "mustache-express": "^1.3.2",
-    "mysql2": "^3.6.5"
+    "mysql": "^2.18.1",
+    "mysql2": "^3.7.0"
   }
 }
